tests-integration/fixtures/checking/135_row_open_lacks/Main.snap
---
source: tests-integration/tests/checking2/generated.rs
assertion_line: 28
expression: report
---
Terms
Proxy :: forall (k :: Type) (@a :: (k :: Type)). Proxy @(k :: Type) (a :: (k :: Type))
lacksOpen ::
  forall (r :: Row Type).
    Lacks @Type "missing" ( a :: Int, b :: String | (r :: Row Type) ) =>
    Proxy @(Row Type) (r :: Row Type) -> Int
lacksPresent ::
  forall (r :: Row Type).
    Lacks @Type "a" ( a :: Int | (r :: Row Type) ) => Proxy @(Row Type) (r :: Row Type) -> Int
empty :: forall (t6 :: Type). Proxy @(Row (t6 :: Type)) ()
forceSolve :: { lacksOpen :: Int, lacksPresent :: Int }

Types
Proxy :: forall (k :: Type). (k :: Type) -> Type

Roles
Proxy = [Phantom]

Diagnostics
error[NoInstanceFound]: No instance found for: Lacks @Type "a" ( a :: Int )
  --> 17:1..17:78
   |
17 | forceSolve = { lacksOpen: lacksOpen empty, lacksPresent: lacksPresent empty }
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
